# brain-risk-hybrid-ML-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
assets/data/: ari_across_k.json  baseline_metrics.json  longitudinal_cbcl.json  sample_characteristics.json
configs/: baselines.yaml  demo_dl.yaml  hydra_clustering.yaml  preprocessing.yaml  vit_sex_classification.yaml  vit_subtype_classification.yaml
experiments/: vit_experiment_log.md
infrastructure/: hpc_setup.md  slurm_template.sh
scripts/: check_abcd_ids.py
src/brainrisk/: __main__.py  cli.py
src/brainrisk/baselines/: classifiers.py  interpretation.py  regressors.py
src/brainrisk/clustering/: __init__.py  characterization.py  evaluation.py  hydra.py
src/brainrisk/data/: clinical.py  splits.py  synthetic.py
src/brainrisk/deeplearning/: __init__.py  augmentation.py  dataset.py  freeze.py  layers.py  model.py  trainer.py  utils.py
src/brainrisk/preprocessing/: freesurfer.py  mni305.py  nifti_io.py  normalization.py  orientation.py  pipeline.py  resampling.py  roi_extraction.py  volume_standardization.py
src/brainrisk/utils/: config.py  logging.py  visualization.py
tests/: conftest.py  test_baselines.py  test_clustering.py  test_nit_forward.py  test_preprocessing.py  test_synthetic.py
