[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brainrisk"
version = "0.1.0"
description = "Production-grade 3D MRI preprocessing and dual-track ML pipeline for neuropsychiatric risk modeling."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
  { name = "Julian Becerra" }
]
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.2,<3",
  "scipy>=1.13,<2",
  "nibabel>=5.2,<6",
  "pyyaml>=6.0,<7",
  "click>=8.1,<9",
  "scikit-learn>=1.5,<2",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pre-commit>=3.7,<5",
  "pytest>=8.2,<9",
  "pytest-cov>=5,<7",
  "ruff>=0.6,<1",
  "types-pyyaml>=6.0,<7",
]
dl = [
  "torch>=2.1,<3",
]

[project.scripts]
brainrisk = "brainrisk.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.12"
files = [
  "src/brainrisk/data/synthetic.py",
  "src/brainrisk/data/splits.py",
  "src/brainrisk/data/clinical.py",
  "src/brainrisk/preprocessing/nifti_io.py",
  "src/brainrisk/preprocessing/freesurfer.py",
  "src/brainrisk/preprocessing/roi_extraction.py",
  "src/brainrisk/preprocessing/mni305.py",
  "src/brainrisk/preprocessing/resampling.py",
  "src/brainrisk/preprocessing/orientation.py",
  "src/brainrisk/preprocessing/normalization.py",
  "src/brainrisk/preprocessing/volume_standardization.py",
  "src/brainrisk/preprocessing/pipeline.py",
  "src/brainrisk/utils/config.py",
  "src/brainrisk/utils/logging.py",
  "src/brainrisk/cli.py",
  "src/brainrisk/clustering/hydra.py",
  "src/brainrisk/clustering/evaluation.py",
  "src/brainrisk/clustering/characterization.py",
  "src/brainrisk/baselines/classifiers.py",
  "src/brainrisk/baselines/regressors.py",
  "src/brainrisk/baselines/interpretation.py",
  "tests/conftest.py",
  "tests/test_synthetic.py",
  "tests/test_preprocessing.py",
  "tests/test_baselines.py",
  "tests/test_nit_forward.py",
  "src/brainrisk/utils/visualization.py",
  "src/brainrisk/deeplearning/layers.py",
  "src/brainrisk/deeplearning/model.py",
  "src/brainrisk/deeplearning/dataset.py",
  "src/brainrisk/deeplearning/augmentation.py",
  "src/brainrisk/deeplearning/trainer.py",
  "src/brainrisk/deeplearning/freeze.py",
  "src/brainrisk/deeplearning/utils.py",
]
check_untyped_defs = true
warn_unused_configs = true
warn_unused_ignores = true
ignore_missing_imports = true
no_implicit_optional = true
